[project]
name = "researchtutorials"
version = "0.1.0"
description = "Environment for running various research tutorials."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "forked-rompy>=0.0.3",
    "matplotlib>=3.10.3",
    "qnmfinder",
    "scikit-learn>=1.7.0",
    "scri>=2024.0.11",
    "sxs>=2025.0.12",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
qnmfinder = { git = "https://github.com/keefemitman/qnmfinder" }
